--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,7 +158,7 @@
           FILTER BY
         </h4>
       </div>
-      <hr class="mt-0">
+      <!-- <hr class="mt-0"> -->
       <div id="loader" class="text-center">
         <div class="spinner-border text-dark" role="status">
           <span class="sr-only">Loading...</span>
