--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,11 +87,11 @@
         </div>
 
         <div class="col-md-12">
-          <div id="loader-carousel" class="text-center">
+          <!-- <div id="loader-carousel" class="text-center">
             <div class="spinner-border text-dark" role="status">
               <span class="sr-only">Loading...</span>
             </div>
-          </div>
+          </div> -->
           <!--Carousel Wrapper-->
           <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
             <!--Slides-->
