--- a/views/index.ejs
+++ b/views/index.ejs
@@ -274,8 +274,8 @@
     /* initial text on load card */
     $('.loan-card').append(`
       <div class = "row">
-        <div class="alert alert-secondary" role="alert">
-          Currently there are no bank data to display. Select a loan Category to view the data.
+      <div class="col-md-12 text-center mt-2 mb-4">
+          Currently there are no bank data to display. Select a loan Category to view the data !
         </div>
       </div>
     `);
