--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
         </div>
         <div class="col-md-10">
           <div id="loader-carousel" class="text-center">
-            <div class="spinner-border text-dark" role="status">
+            <div class="spinner-border text-dark mb-5" role="status">
               <span class="sr-only">Loading...</span>
             </div>
           </div>
@@ -160,7 +160,7 @@
       </div>
       <!-- <hr class="mt-0"> -->
       <div id="loader" class="text-center">
-        <div class="spinner-border text-dark" role="status">
+        <div class="spinner-border text-dark mb-5" role="status">
           <span class="sr-only">Loading...</span>
         </div>
       </div>
