updating carousel item scroller id selection

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,33 +33,30 @@
           <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
             <!--Slides-->
             <div class="carousel-inner" role="listbox">
-
               <div class="carousel-item active">
                 <div class="row">
                   <div class="col-md-3">
-                    <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                      <a id="_No_match" class="slider_text" href="#"> <i
-                          class="material-icons slider_icon">account_balance
-                        </i><br />No
-                        Match</a>
+                    <div id="Home Loan" class="card my-2 p-5 card_slider" style="text-align: center;">
+                      <a class="slider_text" href="#"> <i class="material-icons slider_icon">account_balance
+                        </i><br />Home Loan</a>
                     </div>
                   </div>
                   <div class="col-md-3">
-                    <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                      <a id="Nari Bachat" href="#" class="slider_text"><i class="material-icons slider_icon">
+                    <div id="Nari Bachat" class="card my-2 p-5 card_slider" style="text-align: center;">
+                      <a class="slider_text"><i class="material-icons slider_icon">
                           face</i><br />Nari Bachat</a>
                     </div>
                   </div>
                   <div class="col-md-3">
-                    <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                      <a id="Kids Savings" href="#" class="slider_text"><i class="material-icons  slider_icon">
+                    <div id="Kids Savings" class="card my-2 p-5 card_slider" style="text-align: center;">
+                      <a class="slider_text"><i class="material-icons  slider_icon">
                           child_care
                         </i><br />Kids Savings</a>
                     </div>
                   </div>
                   <div class="col-md-3">
-                    <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                      <a id="Old Age Saving" href="#" class="slider_text"><i class="material-icons  slider_icon">
+                    <div id="Old Age Saving" class="card my-2 p-5 card_slider" style="text-align: center;">
+                      <a class="slider_text"><i class="material-icons  slider_icon">
                           accessibility_new
                         </i><br />Old Age Saving</a>
                     </div>
@@ -87,54 +84,6 @@
         </div>
 
         <div class="col-md-12">
-          <!-- <div id="loader-carousel" class="text-center">
-            <div class="spinner-border text-dark" role="status">
-              <span class="sr-only">Loading...</span>
-            </div>
-          </div> -->
-          <!--Carousel Wrapper-->
-          <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
-            <!--Slides-->
-            <div class="carousel-inner" role="listbox">
-
-              <div class="carousel-item active">
-                <div class="row">
-                  <div class="col-md-3">
-                    <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                      <a id="_No_match" class="slider_text" href="#"> <i
-                          class="material-icons slider_icon">account_balance
-                        </i><br />No
-                        Match</a>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                      <a id="Nari Bachat" href="#" class="slider_text"><i class="material-icons slider_icon">
-                          face</i><br />Nari Bachat</a>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                      <a id="Kids Savings" href="#" class="slider_text"><i class="material-icons  slider_icon">
-                          child_care
-                        </i><br />Kids Savings</a>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                      <a id="Old Age Saving" href="#" class="slider_text"><i class="material-icons  slider_icon">
-                          accessibility_new
-                        </i><br />Old Age Saving</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-            <!--/.Slides-->
-          </div>
-          <!--/.Carousel Wrapper-->
-
         </div>
 
       </div>
@@ -233,26 +182,26 @@
             <div class="carousel-item">
               <div class="row">
                 <div class="col-md-3">
-                  <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                    <a id="${data[i].account_type}" class="slider_text" href="#"><i class="material-icons slider_icon">attach_money</i><br/> ${data[i].account_type}</a>
+                  <div id="${data[i].account_type}" class="card my-2 p-5 card_slider" style="text-align: center;">
+                    <a class="slider_text" href="#"><i class="material-icons slider_icon">attach_money</i><br/> ${data[i].account_type}</a>
                   </div>
                 </div>
                 <div class="col-md-3">
-                  <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                    <a id="${data[i + 1].account_type}" class="slider_text" href="#"><i class="material-icons slider_icon">
+                  <div id="${data[i + 1].account_type}" class="card my-2 p-5 card_slider" style="text-align: center;">
+                    <a class="slider_text" href="#"><i class="material-icons slider_icon">
                         money</i><br/> ${data[i + 1].account_type}</a>
                   </div>
                 </div>
                 <div class="col-md-3">
-                  <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                    <a id="${data[i + 2].account_type}"href="#" class="slider_text"><i class="material-icons slider_icon">
+                  <div id="${data[i + 2].account_type}" class="card my-2 p-5 card_slider" style="text-align: center;">
+                    <a href="#" class="slider_text"><i class="material-icons slider_icon">
                         local_atm
                       </i><br/> ${data[i + 2].account_type}</a>
                   </div>
                 </div>
                 <div class="col-md-3">
-                  <div class="card my-2 p-5 card_slider" style="text-align: center;">
-                    <a id="${data[i + 3].account_type}"href="#" class="slider_text"><i class="material-icons slider_icon">
+                  <div id="${data[i + 3].account_type}" class="card my-2 p-5 card_slider" style="text-align: center;">
+                    <a href="#" class="slider_text"><i class="material-icons slider_icon">
                         local_atm
                       </i><br/> ${data[i + 3].account_type}</a>
                   </div>
@@ -282,14 +231,11 @@
     /* initial text on load card */
 
     /* add data to loan card */
-    $('.carousel-inner').on('click', function (e) {
-      if (this !== e.target) {
-        console.log($(e.target).attr('id'));
-        if ($(e.target).attr('id')) {
-          let type = $(e.target).attr('id');
-          console.log(type);
-          append(type);
-        }
+    $('.carousel-item').on('click', function (e) {
+      const idInfo = e.target.parentNode.id || $(e.target).attr('id');
+      if (idInfo) {
+        let type = idInfo;
+        append(type);
       }
     });
     /* add data to loan card */
