--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -194,37 +194,86 @@
         $('#product_loader_select_1').hide();
         $('#product_loader_select_2').hide();
         $('#product_loader_select_3').hide();
+
+        let incomingId = `<%- JSON.stringify(data) %>`;
+        incomingId = JSON.parse(incomingId);
+        console.log(incomingId);
        
+       // if(!incomingId){
             $.get('/api/v1/bank-names',{}, (data) => {            
                 console.log('load all bank names',data);
                 
                 data.forEach((el) => {
                     if(el.bank_name){
-                        $('#bank_1_select').append(`
-                        <option>${el.bank_name}</option>
-                    `);
+                        if(incomingId[0]){    
+                            if(el.bank_name === incomingId[0].bank_name){
+                                $('#bank_1_select').append(`
+                                    <option selected>${el.bank_name}</option>
+                                `);
+                            }   
+                            else{
+                                $('#bank_1_select').append(`
+                                    <option>${el.bank_name}</option>
+                                `);
+                            }
+                        }
+                        else{
+                            $('#bank_1_select').append(`
+                                <option>${el.bank_name}</option>
+                            `);
+                        }                       
                     }                
                 });
-                $('#loader_select_1').hide();               
+                $('#loader_select_1').hide();  
                 
                 data.forEach((el) => {
                     if(el.bank_name){
-                        $('#bank_2_select').append(`
-                        <option>${el.bank_name}</option>
-                    `);
-                    }   
+                        if(incomingId[1]){    
+                            if(el.bank_name === incomingId[1].bank_name){
+                                $('#bank_2_select').append(`
+                                    <option selected>${el.bank_name}</option>
+                                `);
+                            }   
+                            else{
+                                $('#bank_2_select').append(`
+                                    <option>${el.bank_name}</option>
+                                `);
+                            }
+                        }
+                        else{
+                            $('#bank_2_select').append(`
+                                <option>${el.bank_name}</option>
+                            `);
+                        }                       
+                    }                
                 });
-                $('#loader_select_2').hide();   
+                $('#loader_select_2').hide(); 
 
                 data.forEach((el) => {
                     if(el.bank_name){
-                        $('#bank_3_select').append(`
-                        <option>${el.bank_name}</option>
-                    `);
-                    }   
+                        if(incomingId[2]){    
+                            if(el.bank_name === incomingId[2].bank_name){
+                                $('#bank_3_select').append(`
+                                    <option selected>${el.bank_name}</option>
+                                `);
+                            }   
+                            else{
+                                $('#bank_3_select').append(`
+                                    <option>${el.bank_name}</option>
+                                `);
+                            }
+                        }
+                        else{
+                            $('#bank_3_select').append(`
+                                <option>${el.bank_name}</option>
+                            `);
+                        }                       
+                    }                
                 });
-                $('#loader_select_3').hide();   
-             });
+                $('#loader_select_3').hide();  
+                  
+            });
+       // }    
 
              
 
@@ -491,12 +540,283 @@
                 console.log(currentBank_3);
                 $('#card_3').empty();                    
             });
-        
+            
+            /* if data sent from index page */            
+
+            if(incomingId){
+               /* $.get('/api/v1/bank-names',{}, (data) => {            
+                    console.log('load all bank names',data);
+                    
+                    data.forEach((el) => {
+                        if(el.bank_name){
+                            if(el.bank_name === incomingId[0].bank_name){
+                                $('#bank_1_select').append(`    
+                                    <option selected>${el.bank_name}</option>
+                                `);
+                            }
+                            else{
+                                $('#bank_1_select').append(`    
+                                    <option>${el.bank_name}</option>
+                                `);
+                            }
+                        }                
+                    });
+                    $('#loader_select_1').hide();   
+                    
+                    if(incomingId[1]){
+                        data.forEach((el) => {
+                        if(el.bank_name){
+                            if(el.bank_name === incomingId[1].bank_name){
+                                $('#bank_2_select').append(`    
+                                    <option selected>${el.bank_name}</option>
+                                `);
+                            }
+                            else{
+                                $('#bank_2_select').append(`    
+                                    <option>${el.bank_name}</option>
+                                `);
+                            }
+                        }                
+                        });
+                        $('#loader_select_2').hide();
+                    }
+
+                    if(incomingId[2]){
+                        data.forEach((el) => {
+                        if(el.bank_name){
+                            if(el.bank_name === incomingId[2].bank_name){
+                                $('#bank_3_select').append(`    
+                                    <option selected>${el.bank_name}</option>
+                                `);
+                            }
+                            else{
+                                $('#bank_3_select').append(`    
+                                    <option>${el.bank_name}</option>
+                                `);
+                            }
+                        }                
+                        });
+                        $('#loader_select_3').hide();  
+                    }   
+                });*/
+
+                if(incomingId[0]){                    
+                    
+                    $('#product_loader_select_1').show(); 
+                    $.get('/api/v1/all-data', {bank : incomingId[0].bank_name }, (data) => {
+                    console.log(data);
+                    currentBank_1 = data;                    
+                    data.forEach((el) => { 
+                        if(el.product_name === incomingId[0].product_name){
+                            $('#product_1_select').append(`
+                            <option selected>${el.product_name}</option>
+                        `);  
+                        }
+                        else
+                        {
+                            $('#product_1_select').append(`
+                            <option>${el.product_name}</option>
+                            `);
+                        }                          
+                    });
+                    $('#product_loader_select_1').hide();
+                        });
+
+                    $('#card_1').empty();
+                    $('#card_1').append(`
+                    <div class="compare-img-container">
+                                <img src="/img/primebank.png">
+                            </div>
+                            <button type="button" class="btn btn-primary compare-apply">Apply now</button>
+
+                            <h4 class="sub-heading-features mt-4">
+                                <i class="material-icons" style="font-size:18px;">description</i> Product Name
+                            </h4>
+                            <p>
+                                ${incomingId[0].product_name}
+                            </p>
+                            <hr />
+
+                            <h4 class="sub-heading-features mt-4">
+                                <i class="material-icons" style="font-size:18px;">description</i> Product Type
+                            </h4>
+                            <p>
+                                ${incomingId[0].product_type}
+                            </p>
+                            <hr />
+
+                            <h4 class="sub-heading-features mt-4">
+                                <i class="material-icons" style="font-size:18px;">description</i> Deposit Loan
+                            </h4>
+                            <p>
+                                ${incomingId[0].deposit_loan}
+                            </p>
+                            <hr />
+
+                            <h4 class="sub-heading-features">
+                                <i class="material-icons" style="font-size:18px;">trending_up
+                                </i> Interest Rate
+                            </h4>
+                            <p>
+                                - ${incomingId[0].interest_rate} %
+                            </p>
+                            <hr />
+                           
+                            <button type="button" class="btn btn-primary compare-apply">Apply now</button>
+                            <button type="button" class="btn btn-primary compare-apply">Learn More</button>
+                            <p class="terms-conditions">
+                                <a href=""> Terms & Conditions</a>
+                            </p>  
+                    `);
+                }
+
+
+                
+                if(incomingId[1]){                    
+                    
+                    /* product name select */
+                    $('#product_loader_select_2').show(); 
+                    $.get('/api/v1/all-data', {bank : incomingId[1].bank_name }, (data) => {
+                    console.log(data);
+                    currentBank_2 = data;                    
+                    data.forEach((el) => { 
+                        if(el.product_name === incomingId[1].product_name){
+                            $('#product_2_select').append(`
+                            <option selected>${el.product_name}</option>
+                        `);  
+                        }
+                        else
+                        {
+                            $('#product_2_select').append(`
+                            <option>${el.product_name}</option>
+                            `);
+                        }                          
+                        });
+                        $('#product_loader_select_2').hide();
+                    });
+                    /* product name select */
+
+                    $('#card_2').empty();
+                    $('#card_2').append(`
+                    <div class="compare-img-container">
+                                <img src="/img/primebank.png">
+                            </div>
+                            <button type="button" class="btn btn-primary compare-apply">Apply now</button>
+
+                            <h4 class="sub-heading-features mt-4">
+                                <i class="material-icons" style="font-size:18px;">description</i> Product Name
+                            </h4>
+                            <p>
+                                ${incomingId[1].product_name}
+                            </p>
+                            <hr />
+
+                            <h4 class="sub-heading-features mt-4">
+                                <i class="material-icons" style="font-size:18px;">description</i> Product Type
+                            </h4>
+                            <p>
+                                ${incomingId[1].product_type}
+                            </p>
+                            <hr />
+
+                            <h4 class="sub-heading-features mt-4">
+                                <i class="material-icons" style="font-size:18px;">description</i> Deposit Loan
+                            </h4>
+                            <p>
+                                ${incomingId[1].deposit_loan}
+                            </p>
+                            <hr />
+
+                            <h4 class="sub-heading-features">
+                                <i class="material-icons" style="font-size:18px;">trending_up
+                                </i> Interest Rate
+                            </h4>
+                            <p>
+                                - ${incomingId[1].interest_rate} %
+                            </p>
+                            <hr />
+                           
+                            <button type="button" class="btn btn-primary compare-apply">Apply now</button>
+                            <button type="button" class="btn btn-primary compare-apply">Learn More</button>
+                            <p class="terms-conditions">
+                                <a href=""> Terms & Conditions</a>
+                            </p>  
+                    `);
+                }
+
+                if(incomingId[2]){                   
+                    
+                    $('#product_loader_select_3').show(); 
+                    $.get('/api/v1/all-data', {bank : incomingId[2].bank_name }, (data) => {
+                    console.log(data);
+                    currentBank_3 = data;                    
+                    data.forEach((el) => { 
+                        if(el.product_name === incomingId[2].product_name){
+                            $('#product_3_select').append(`
+                            <option selected>${el.product_name}</option>
+                        `);  
+                        }
+                        else
+                        {
+                            $('#product_3_select').append(`
+                            <option>${el.product_name}</option>
+                            `);
+                        }                          
+                    });
+                    $('#product_loader_select_3').hide();
+                        });
+
+                    $('#card_3').empty();
+                    $('#card_3').append(`
+                    <div class="compare-img-container">
+                                <img src="/img/primebank.png">
+                            </div>
+                            <button type="button" class="btn btn-primary compare-apply">Apply now</button>
+
+                            <h4 class="sub-heading-features mt-4">
+                                <i class="material-icons" style="font-size:18px;">description</i> Product Name
+                            </h4>
+                            <p>
+                                ${incomingId[2].product_name}
+                            </p>
+                            <hr />
+
+                            <h4 class="sub-heading-features mt-4">
+                                <i class="material-icons" style="font-size:18px;">description</i> Product Type
+                            </h4>
+                            <p>
+                                ${incomingId[2].product_type}
+                            </p>
+                            <hr />
+
+                            <h4 class="sub-heading-features mt-4">
+                                <i class="material-icons" style="font-size:18px;">description</i> Deposit Loan
+                            </h4>
+                            <p>
+                                ${incomingId[2].deposit_loan}
+                            </p>
+                            <hr />
+
+                            <h4 class="sub-heading-features">
+                                <i class="material-icons" style="font-size:18px;">trending_up
+                                </i> Interest Rate
+                            </h4>
+                            <p>
+                                - ${incomingId[2].interest_rate} %
+                            </p>
+                            <hr />
+                           
+                            <button type="button" class="btn btn-primary compare-apply">Apply now</button>
+                            <button type="button" class="btn btn-primary compare-apply">Learn More</button>
+                            <p class="terms-conditions">
+                                <a href=""> Terms & Conditions</a>
+                            </p>  
+                    `);
+                }
+                
+
+            }
        
     </script>
-
-
-
-</body>
-
+    </body>
 </html>
